--- a/backend/package.json
+++ b/backend/package.json
@@ -3,11 +3,23 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "migrate": "knex migrate:latest",
+    "seed": "knex seed:run",
+    "wait-for-db-and-migrate": "node wait-for-db.js && npm run migrate"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mysql2": "^3.14.1"
-  }
+    "dotenv": "^16.5.0",
+    "express": "^4.21.2",
+    "knex": "^3.1.0",
+    "moment": "^2.30.1",
+    "mysql2": "^3.14.1",
+    "sqlite3": "^5.1.7"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
