--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,9 +6,12 @@
     "build": "vite build"
   },
   "dependencies": {
-    "axios": "^1.6.7",
+    "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
+    "moment": "^2.30.1",
     "vite-plugin-vue-devtools": "^7.7.6",
-    "vue": "^3.4.21"
+    "vue": "^3.4.21",
+    "vue-chartjs": "^5.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
